# nfile-sorter

./: CMakeLists.txt  README.md  main.cpp
pageSystem/: pageSystem.cpp  pageSystem.h
